tests/snapshots/conformance__n_number_1.0e-.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1.0e-]
stdout --- 
<empty>
stderr --- 
error: expected digit after exponent indicator, found `]`
 --> stdin:1:7
  |
1 | [1.0e-]
  |  -----^
  |  |  |
  |  |  exponent indicator found here
  |  number with exponent found here
