tests/snapshots/conformance__n_number_expression.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1+2]
stdout --- 
<empty>
stderr --- 
error: unexpected character `+`. expected start of a json value
 --> stdin:1:3
  |
1 | [1+2]
  |   ^
