tests/snapshots/conformance__n_number_minus_sign_with_trailing_garbage.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-foo]
stdout --- 
<empty>
stderr --- 
error: expected digit following minus sign, found `f`
 --> stdin:1:2
  |
1 | [-foo]
  |  ^
  |  |
  |  minus sign found here
